-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs25
-
Component/s: hotspot
-
b41
-
sparc
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8020655 | 8 | Albert Noll | P3 | Resolved | Fixed | b99 |
Running the following:
/localhome/java/jdk-8-ea-bin-b94/fastdebug/bin/java -d64 -XX:+PrintGC -XX:+TracePageSizes -XX:+UseISM -cp jbb.jar:check.jar spec.jbb.JBBmain
Gives:
# Internal Error (/HUDSON/workspace/2-build-solaris-sparcv9/jdk8/4767/hotspot/src/share/vm/runtime/handles.cpp:48), pid=8276, tid=19
# assert(obj->is_oop()) failed: sanity check
V [libjvm.so+0x117b670] void VMError::report_and_die()+0x838
V [libjvm.so+0x6e9750] void report_vm_error(const char*,int,const char*,const char*)+0x78
V [libjvm.so+0x87c2d0] oop*HandleArea::allocate_handle(oop)+0xa0
V [libjvm.so+0x87c47c] Handle::Handle #Nvariant 1(Thread*,oop)+0x9c
V [libjvm.so+0xfbc780] void SharedRuntime::complete_monitor_locking_C(oopDesc*,BasicLock*,JavaThread*)+0x250
v ~RuntimeStub::_complete_monitor_locking_Java
J spec.jbb.DeliveryTransaction.preprocess()Z
j spec.jbb.DeliveryHandler.handleDelivery(Lspec/jbb/DeliveryTransaction;)V+1
j spec.jbb.DeliveryTransaction.process()Z+69
j spec.jbb.TransactionManager.runTxn(Lspec/jbb/Transaction;JJD)J+36
j spec.jbb.TransactionManager.goManual(ILspec/jbb/TimerData;)J+142
j spec.jbb.TransactionManager.go()V+309
j spec.jbb.JBBmain.run()V+62
j java.lang.Thread.run()V+11
v ~StubRoutines::call_stub
V [libjvm.so+0x9c3a6c] void JavaCalls::call_helper(JavaValue*,methodHandle*,JavaCallArguments*,Thread*)+0x5b4
V [libjvm.so+0x9c26ac] void JavaCalls::call_virtual(JavaValue*,KlassHandle,Symbol*,Symbol*,JavaCallArguments*,Thread*)+0x184
V [libjvm.so+0x9c27bc] void JavaCalls::call_virtual(JavaValue*,Handle,KlassHandle,Symbol*,Symbol*,Thread*)+0xcc
V [libjvm.so+0xad4644] void thread_entry(JavaThread*,Thread*)+0xec
V [libjvm.so+0x10c7034] void JavaThread::thread_main_inner()+0x254
V [libjvm.so+0x10c6d80] void JavaThread::run()+0x370
V [libjvm.so+0xe5fbd8] java_start+0x258
ILW -> H?M = HHM = P1
I: High
L: ?
W: M, Don't use ISM
/localhome/java/jdk-8-ea-bin-b94/fastdebug/bin/java -d64 -XX:+PrintGC -XX:+TracePageSizes -XX:+UseISM -cp jbb.jar:check.jar spec.jbb.JBBmain
Gives:
# Internal Error (/HUDSON/workspace/2-build-solaris-sparcv9/jdk8/4767/hotspot/src/share/vm/runtime/handles.cpp:48), pid=8276, tid=19
# assert(obj->is_oop()) failed: sanity check
V [libjvm.so+0x117b670] void VMError::report_and_die()+0x838
V [libjvm.so+0x6e9750] void report_vm_error(const char*,int,const char*,const char*)+0x78
V [libjvm.so+0x87c2d0] oop*HandleArea::allocate_handle(oop)+0xa0
V [libjvm.so+0x87c47c] Handle::Handle #Nvariant 1(Thread*,oop)+0x9c
V [libjvm.so+0xfbc780] void SharedRuntime::complete_monitor_locking_C(oopDesc*,BasicLock*,JavaThread*)+0x250
v ~RuntimeStub::_complete_monitor_locking_Java
J spec.jbb.DeliveryTransaction.preprocess()Z
j spec.jbb.DeliveryHandler.handleDelivery(Lspec/jbb/DeliveryTransaction;)V+1
j spec.jbb.DeliveryTransaction.process()Z+69
j spec.jbb.TransactionManager.runTxn(Lspec/jbb/Transaction;JJD)J+36
j spec.jbb.TransactionManager.goManual(ILspec/jbb/TimerData;)J+142
j spec.jbb.TransactionManager.go()V+309
j spec.jbb.JBBmain.run()V+62
j java.lang.Thread.run()V+11
v ~StubRoutines::call_stub
V [libjvm.so+0x9c3a6c] void JavaCalls::call_helper(JavaValue*,methodHandle*,JavaCallArguments*,Thread*)+0x5b4
V [libjvm.so+0x9c26ac] void JavaCalls::call_virtual(JavaValue*,KlassHandle,Symbol*,Symbol*,JavaCallArguments*,Thread*)+0x184
V [libjvm.so+0x9c27bc] void JavaCalls::call_virtual(JavaValue*,Handle,KlassHandle,Symbol*,Symbol*,Thread*)+0xcc
V [libjvm.so+0xad4644] void thread_entry(JavaThread*,Thread*)+0xec
V [libjvm.so+0x10c7034] void JavaThread::thread_main_inner()+0x254
V [libjvm.so+0x10c6d80] void JavaThread::run()+0x370
V [libjvm.so+0xe5fbd8] java_start+0x258
ILW -> H?M = HHM = P1
I: High
L: ?
W: M, Don't use ISM
- backported by
-
JDK-8020655 -XX:+UseISM fails an assert(obj->is_oop()) when running SPECjbb2005
-
- Resolved
-
- relates to
-
JDK-8027842 Kitchensink on Solaris gets "Attempt to use MPSS" failed
-
- Closed
-