8016749: -XX:+UseISM fails an assert(obj->is_oop()) when running SPECjbb2005

Remove obsolete code that relates to ISM which was used only on Solaris 8.

Reviewed-by: kvn, twisti